...
    @IBOutlet private weak var tableView: UITableView!
    @IBOutlet private weak var collectionView: UICollectionView!
    // MARK: VIPER Dependencies

    override func viewDidLoad() {
        super.viewDidLoad()
        self.tableView.accessibilityIdentifier = "table"
        self.tableViewManager = TableViewManager(arrayTableViews: [CustomTableView(tableView: self.tableView)],
                                                 presenter: self.presenter,
                                                 drawer: OptionCellDrawer.self)
        self.collectionViewManager = CollectionViewManager(arrayCollectionViews: [CustomCollectionView(collectionView: self.collectionView)],
                                                           presenter: self.presenter,
                                                           drawer: OptionCollectionCellDrawer.self)
...
